src/test/deca/context/valid/testAltern.deca

{
    int a=0;
    while (a<10){
	if (a%2==0){
		print("Paire");
	}
	else {
		print("Impaire");
	}
	a=a+1;
    }			
}
