src/test/deca/context/invalid/testReturn.deca
// Description:
//    tests du return 
//
// Resultats:
//    retourne 0

{
   int a = 0;

   if(a==0) {
        return a;
       
    }
    else {
        return 1;
    }
}
